# talon

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README-axial.md  README.md  README.rst  build-dock.sh  requirements-dev.txt  requirements.txt  run-dock.sh  run-web.sh  run_tests.sh  setup.cfg  setup.py  strip_email_cli.py  strip_email_web.py  test-requirements.txt  tox.ini  train.py
.build/: Dockerfile
talon/: MANIFEST.in  README.rst  __init__.py  constants.py  dsa_quotations.py  html_quotations.py  quotations.py  setup.py  utils.py
talon-core/: MANIFEST.in  README.rst  setup.py
talon-core/talon_core/: __init__.py  html_quotations.py  quotations.py  utils.py
talon-core/talon_core/signature/: bruteforce.py
talon-core/tests/: __init__.py  html_quotations_test.py  quotations_test.py  text_quotations_test.py  utils_test.py
talon-core/tests/fixtures/: OLK_SRC_BODY_SECTION.html  __init__.py  reply-separated-by-hr.html
talon-core/tests/signature/: bruteforce_test.py
talon/signature/: __init__.py  bruteforce.py  constants.py  extraction.py  extractor.py
talon/signature/data/: classifier  classifier_01.npy  classifier_02.npy  classifier_03.npy  train.data  (+2 more)
talon/talon/: __init__.py  constants.py  html_quotations.py  quotations.py  utils.py
talon/tests/: __init__.py
talon/web/: __init__.py  bootstrap.py
tests/: __init__.py  html_quotations_test.py  quotations_test.py  text_quotations_test.py  utils_test.py
tests/fixtures/: __init__.py  missing_text.html  reply-quotations-share-block.eml
tests/signature/: bruteforce_test.py  extraction_test.py
(+60 files in other folders)
