[metadata]
name=ktalon
description=Email quoted message striping re-purposed from talon
version=1.6.0
author=Mailgun Inc.
author_email=admin@mailgunhq.com
url=https://github.com/kayako/ktalon

[options]
packages=find:
install_requires=lxml>=3.8.0; html5-parser; regex==2021.11.10; chardet>=1.0.1; cchardet>=0.3.5; cssselect; six>=1.10.0; html5lib;
